quiz-roulette-admin-crud-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quiz-roulette-admin-crud-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: quiz-roulette-admin-crud-app
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.service: quiz-roulette-admin-crud-app
    spec:
      containers:
        - image: quizroulette/admin-crud-app:v2.2.0
          name: quiz-roulette-admin-crud-app
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
