quiz-roulette-event-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-service-deployment
  labels:
    app: event-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-service
  template:
    metadata:
      labels:
        app: event-service
    spec:
      containers:
      - name: event-service
        image: quizroulette/event-service:v1.0.0
        ports:
        - containerPort: 30100
