quiz-roulette-question-bank-graphql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: "2022-12-10T12:29:40Z"
  labels:
    io.kompose.service: quiz-roulette-question-bank-graphql
  name: quiz-roulette-question-bank-graphql
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: quiz-roulette-question-bank-graphql
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: "2022-12-10T12:29:40Z"
      labels:
        io.kompose.service: quiz-roulette-question-bank-graphql
    spec:
      containers:
        - image: quizroulette/question-bank-graphql:v2.2.1
          name: quiz-roulette-question-bank-graphql
          ports:
            - containerPort: 34000
          resources: {}
      restartPolicy: Always
status: {}
