quiz-roulette-quiz-player-view-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quiz-roulette-quiz-player-view-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: quiz-roulette-quiz-player-view-app
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.service: quiz-roulette-quiz-player-view-app
    spec:
      containers:
        - image: quizroulette/quiz-player-view:v1.1.0
          name: quiz-player-view
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
