quiz-roulette-spring-cloud-api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quiz-roulette-spring-cloud-api-gateway-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: quiz-roulette-spring-cloud-api-gateway
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.service: quiz-roulette-spring-cloud-api-gateway
    spec:
      containers:
        - image: quizroulette/spring-cloud-api-gateway:v1.0.0
          name: quiz-roulette-spring-cloud-api-gateway
          ports:
            - containerPort: 9999
          resources: {}
      restartPolicy: Always
status: {}
