quiz-roulette-question-bank-graphql-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: quiz-roulette-question-bank-graphql
  name: quiz-roulette-question-bank-graphql
spec:
  ports:
    - name: "34000"
      port: 34000
      targetPort: 34000
  selector:
    io.kompose.service: quiz-roulette-question-bank-graphql
status:
  loadBalancer: {}
