quiz-roulette-question-bank-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: question-bank-graphql-ingress
  namespace: default
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /graphql
        pathType: Prefix
        backend:
          service:
            name: quiz-roulette-question-bank-graphql
            port:
              number: 34000
